hphp/hack/test/typecheck/enum_class_label/memoized_bad_arity2.php.exp
File "memoized_bad_arity2.php", line 3, characters 43-46:
`__Memoize` takes 2 arguments when using `#SoftMakeICInaccessible`. (Parsing[1002])
