hphp/hack/test/typecheck/enum_class_label/memoized_bad_arity2.php
<?hh

<<__Memoize(#SoftMakeICInaccessible, 123, null)>>
function foo(): void {}
